# shy-to-text

./: .SRCINFO  PKGBUILD  README.md  biome.json  index.html  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: build-linux.yml  build-only.yml  build-windows.yml  build.yml  ci.yml  release.yml
src/: App.css  App.tsx  handlers.ts  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  gpu.rs  lib.rs  main.rs  state.rs  transcribe.rs
src/components/: Header.tsx  HotkeyHint.tsx  ModelSection.tsx  SettingsSection.tsx  StatusIndicator.tsx  ThemeSwitch.tsx  TranscriptionSection.tsx
src/hooks/: useAppState.ts
